--- a/page.html
+++ b/page.html
@@ -9,8 +9,9 @@
 	<body>
 		<h1>Mon super site </h1>
 
-		<p class="introduction">Bonjour et bienvenue sur mon site!</p>
+		<p class="introduction"><img src="photocv.jpg" class="imageflottante" alt="Image flottante">Bonjour et bienvenue sur mon site!</p>
 		<p>Pour le moment, mon site est un peu <em>vide</em>. Patientez encore un peu !</p>
+		<p class="dessous">On continue les <mark>paragraphes</mark> à gogo</p>
 	</body>
 
 </html>
