--- a/page.html
+++ b/page.html
@@ -12,6 +12,10 @@
 		<p class="introduction"><img src="photocv.jpg" class="imageflottante" alt="Image flottante">Bonjour et bienvenue sur mon site!</p>
 		<p>Pour le moment, mon site est un peu <em>vide</em>. Patientez encore un peu !</p>
 		<p class="dessous">On continue les <mark>paragraphes</mark> à gogo</p>
+
+		<p class="parag">On écrit à gogo, les phrases n'en fininssent jamais. Et oui, et oui, la fin n'est que mystère. Je suis un poète de l'an 2000, et oui tu croyais que la phrase allait s'arrêté, et bien non mon gars j'ai encore de l'encre. Et quand une phrase s'arrête enfin, et bien on peut en écrire une autre tout aussi longue, j'avais bien caché mon jeu, tu croyais quoi, je respecte le lecteur. Il a plein de caractères pour son argent mon gars </p>
+
+		<a href="page1.html">ceci est un lien</a>
 	</body>
 
 </html>
