--- a/cv.html
+++ b/cv.html
@@ -9,8 +9,8 @@
 
 <body>
 	
-	<h2>Ben ENUTS </h2> 	
-	<figure> <img src="images/photocv.jpg" />
+	<h1>Ben ENUTS </h1> 	
+	<figure> <a href="images/photocv.jpg"><img src="images/photominicv.jpg" width="80" height="80" /></a>
 		<figcaption>Love Job</figcaption>		
 	</figure>									
 	15 rue des fleurs <br/>										  								
