--- a/cv.html
+++ b/cv.html
@@ -4,19 +4,22 @@
 	<head>
 		<!-- commentaire -->
 		<meta charset="utf-8" />
+		<link rel="stylesheet" href="cvstyle.css" />
 		<title>CV Ben</title>
 	</head>
 
 <body>
-	
-	<h1>Ben ENUTS </h1> 	
-	<figure> <a href="images/photocv.jpg"><img src="images/photominicv.jpg" width="80" height="80" /></a>
-		<figcaption>Love Job</figcaption>		
-	</figure>									
-	15 rue des fleurs <br/>										  								
-	85632 FLEURELAND  <br/>
-	<img src="images/phone.png" alt="phone" width="20" height="15"/> 06.06.06.06.06 </br>
-	<img src="images/enveloppe.png" alt="enveloppe" width="20" height="12" /> toto@toto.fr
+
+	<div class="entete">
+		<h1>Ben ENUTS </h1> 	
+		<figure> <a href="images/photocv.jpg"><img src="images/photominicv.jpg" width="80" height="80" /></a>
+			<figcaption>Love Job</figcaption>		
+		</figure>									
+		15 rue des fleurs <br/>										  								
+		85632 FLEURELAND  <br/>
+		<img src="images/phone.png" alt="phone" width="20" height="15"/> 06.06.06.06.06 </br>
+		<img src="images/enveloppe.png" alt="enveloppe" width="20" height="12" /> toto@toto.fr
+	</div>
 
 
 	
@@ -42,7 +45,7 @@
 
 				<li><b>Sécurité : </b>WSUS 3.0, Forefront 2010</li>
 
-				<li><b>Bureautique : </b>Office 2007, 2010, 2013, 2016/li>
+				<li><b>Bureautique : </b>Office 2007, 2010, 2013, 2016</li>
 			</ul>
 
 
